src/App.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    color: white;
    background: #212789;
    background: -webkit-linear-gradient(left, #212789, #264A84);
    background: -moz-linear-gradient(left, #212789, #264A84);
    background: linear-gradient(to right, #212789, #264A84);
    font-family: 'Open Sans', sans-serif;
    scroll-behavior: smooth;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background-color: #212789;
}

::-webkit-scrollbar-thumb {
    background-color: #656cf5;
    border-radius: 5px;
    border: 3.5px solid transparent;
    background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
    background-color: #dddef7;
    transition: 2s;
}

.container {
    /* border: 1px solid red; */
    width: 100%;
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-direction: column;
}

.navbar {
    /* border: 1px solid red; */
    /* position: sticky;
    top: 0; */
    width: 100%;
    height: 100px;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    flex-wrap: wrap;
    padding: 0px 30px;
    font-family: 'Montserrat', sans-serif;
}

.class_id {
    /* border: 1px solid white; */
}

.class_id>form {
    /* border: 1px solid red; */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.class_id>form>label {
    font-size: 1.5rem;
    font-weight: 600;
    color: #fff;
    margin-bottom: 8px;
}

.searchClassBar {
    border: 2px solid 222E89;
    border-radius: 50px;
    width: 100%;
    background-color: #fff;
    font-family: 'Open Sans', sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 3px 10px;
}

.searchClassBar>input {
    font-size: 14px;
    width: 100%;
    border: none;
    outline: none;
    background: transparent;
    font-weight: 600;
    text-align: center;
    font-family: 'Open Sans', sans-serif;
}


.searchClassBar>button {
    font-size: 20px;
    border: none;
    outline: none;
    background: transparent;
    color: #222E89;
    margin-top: 2px;
}

.add_file_inp {
    /* border: 1px solid white; */
}

.add_file_inp>form {
    /* border: 1px solid red; */
    display: flex;
    align-items: center;
    justify-content: center;
}

.add_file_inp>form>#mainInp {
    padding: 10px 12px;
    width: 250px;
    border-radius: 20px;
    outline: blue;
    border: none;
}

.add_file_inp>form>label {
    font-size: 39px;
    height: 40px;
    margin-left: 5px;
}

.add_file_inp>form>button {
    font-size: 20px;
    border: none;
    background: transparent;
    max-height: fit-content;
    /* border: 1px solid rgb(255, 255, 255); */

}

.add_file_inp>form>button>img {
    width: 30px;
}



.del_all_btn {
    /* border: 1px solid white; */
    display: flex;
    justify-content: flex-end;
    /* margin: 10px 5px 0px 0px; */
    margin: 0px 10px 5px 0px;
    width: fit-content;
}

.del_all_btn>button {
    font-size: 16px;
    padding: 7px 20px;
    border-radius: 20px;
    border: none;
    outline: none;
}

.content {
    /* border: 1px solid red; */
    width: 100%;
    height: auto;
    padding-top: 50px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.content>.texts {
    /* border: 2px solid red; */
    width: 70%;
    background-color: whitesmoke;
    color: black;
    display: flex;
    flex-direction: column;
    row-gap: 15px;
    /* align-items: center;
    justify-content: center; */
    padding: 30px 20px;
    border-radius: 10px;
}

.content>.texts>div {
    border-bottom: .3px solid #d2d0d0;
    padding-bottom: 5px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.content>.texts>div>#fromNow {
    font-size: 12px;
}

.content>.texts>div>#text_link {
    /* border: 1px solid red; */
    text-align: justify;
    width: 600px;
}




.nav-child {
    /* border: 1px solid green; */
    /* width: 210px; */
    height: auto;
}

.nav_mid_child {
    /* border: 1px solid green; */
    /* width: 400px; */
    height: auto;
    /* align-self: flex-end; */
}








.hide {
    display: none;
    visibility: hidden;
}


@media only screen and (max-width: 900px) {
    .navbar {
        padding: 0px 10px;
    }

    .navbar .del_all_btn {
        right: 0;
    }
}

@media only screen and (max-width: 800px) {
    .navbar {
        padding: 0px 10px;
    }

    .navbar .del_all_btn {
        display: none;
        visibility: hidden;
    }

    .content>.texts {
        width: 90%;
    }
}

@media only screen and (max-width: 600px) {}

